--- a/event-management-backend/.env
+++ b/event-management-backend/.env
@@ -1,3 +1,4 @@
-PORT=4600
-DATABASE_LOCAL_URL="mongodb://localhost:27017"
-DB_NAME="EVENT-MANAGEMENT"
+PORT=4000
+DATABASE_LOCAL_URL=mongodb://localhost:27017
+DB_NAME=EVENT-MANAGEMENT
+your_jwt_secret=456789
